Finishing the App
Using ObservableCollection<T> to populate the ListView and show the cities to the user. Enable selecting a city and trigger GetCurrentConditions to show the weather state for the selected city.
Implementing IValueConverter interface to convert city information like "Rainging state" from bool value to string value.

--- a/WpfUI/View/WeatherWindow.xaml
+++ b/WpfUI/View/WeatherWindow.xaml
@@ -5,10 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfUI.View"
         xmlns:vm="clr-namespace:WpfUI.ViewModel"
+        xmlns:converters="clr-namespace:WpfUI.ViewModel.ValueConverters"
         mc:Ignorable="d"
         Title="WeatherWindow" Height="600" Width="400">
     <Window.Resources>
         <vm:WeatherViewModel x:Key="vm"/>
+        <converters:BoolToRainConverter x:Key="boolToRain"/>
     </Window.Resources>
     <Grid DataContext="{StaticResource vm}">
         <Grid.RowDefinitions>
@@ -22,11 +24,12 @@
                     Command="{Binding SearchCommand}"
                     CommandParameter="{Binding Query}"
                     Content="Search"/>
-            <ListView>
+            <ListView ItemsSource="{Binding Cities}"
+                      SelectedValue="{Binding SelectedCity}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <Grid>
-                            <TextBlock/>
+                            <TextBlock Text="{Binding FullName}"/>
                         </Grid>
                     </DataTemplate>
                 </ListView.ItemTemplate>
@@ -48,6 +51,10 @@
                 <TextBlock Text="{Binding WeatherText}"
                            Foreground="#f4f4f8"
                            FontSize="18"
+                           Margin="20,0"/>
+                <TextBlock Text="{Binding HasPrecipitation, Converter={StaticResource boolToRain}}"
+                           Foreground="#f4f4f8"
+                           FontSize="16"
                            Margin="20,0"/>
             </StackPanel>
             <TextBlock Grid.Column="1"
